# CANDY-public

./: .gitignore  LICENSE  README.md  environment.yml  environment_cpu.yml  fine_tuning_train.py  pyproject.toml  setup.py  train.py  train_distributed.py
config/: load_config.py
config/data_config/: mouse_wheel.yaml  perich_monkey.yaml
config/decoder_config/: linear.yaml  onelayer.yaml
config/model_config/: candy_cbatch64_ctemp0.2_cs0.1_cts0.yaml  candy_cbatch64_ctemp0.5_cs0.5_cts0.yaml  candy_perich.yaml  slds.yaml
demo/: __init__.py
demo/spiral_simulation/: __init__.py  cca.py  spiral_data.pkl  train_simulation.py
experiments/spiral_simulation/: train_simulation.py
script/: gen_script.py  script.sh
script/cbatch64_ctemp0.2_cs0.1_cts0/: mouse_wheel-candy_cbatch64_ctemp0.2_cs0.1_cts0-latent_dim16-seed0_job.6269202.err  mouse_wheel-candy_cbatch64_ctemp0.2_cs0.1_cts0-latent_dim16-seed1_job.6269203.err  mouse_wheel-candy_cbatch64_ctemp0.2_cs0.1_cts0-latent_dim16-seed2_job.6269204.err  mouse_wheel-candy_cbatch64_ctemp0.2_cs0.1_cts0-latent_dim16-seed3_job.6269210.err  mouse_wheel-candy_cbatch64_ctemp0.2_cs0.1_cts0-latent_dim16-seed4_job.6269211.err  mouse_wheel-candy_cbatch64_ctemp0.2_cs0.1_cts0-latent_dim2-seed0_job.6269183.err  mouse_wheel-candy_cbatch64_ctemp0.2_cs0.1_cts0-latent_dim2-seed1_job.6269184.err  mouse_wheel-candy_cbatch64_ctemp0.2_cs0.1_cts0-latent_dim2-seed2_job.6269185.err  mouse_wheel-candy_cbatch64_ctemp0.2_cs0.1_cts0-latent_dim2-seed3_job.6269186.err  (+20 more)
src/: __init__.py
src/data_loader/: data_loader.py  data_utils.py  dataloader_monkey.py  (+3 more)
(+14 files in other folders)
